k8s/apps/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Headlamp"
    gethomepage.dev/description: "Kubernetes cluster UI"
    gethomepage.dev/group: "infrastructure"
    gethomepage.dev/icon: "sh-headlamp.svg"
    gethomepage.dev/href: "https://headlamp.item.fyi"
    gethomepage.dev/siteMonitor: "http://headlamp.kube-system.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=headlamp"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.item.fyi`)
      services:
        - name: headlamp
          port: 80
  tls: {}
